--- a/themes/rcforward/sass/_contact-page.scss
+++ b/themes/rcforward/sass/_contact-page.scss
@@ -49,7 +49,11 @@
       }
       .contact-text {
         p {
-          font-weight: 400;
+                    margin:0;
+          strong{
+
+          font-weight: 600;  
+
           font-style: normal;
           color: $credible__blue;
           line-height: 16px;
@@ -57,6 +61,7 @@
             text-align: center;
             font-size: 20px;
           }
+        }
         }
       }
       .entry-content {
