--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -1643,6 +1643,12 @@ ol.flickity-page-dots {
       -webkit-box-flex: 1;
           -ms-flex-positive: 1;
               flex-grow: 1; } }
+  .single-content .content-w-image h3 {
+    color: #42299A;
+    text-align: center; }
+    @media (min-width: 1000px) {
+      .single-content .content-w-image h3 {
+        text-align: left; } }
 
 @media (min-width: 1000px) {
   .single-content:nth-child(even) .main-image {
@@ -1657,10 +1663,19 @@ ol.flickity-page-dots {
 /* common parts */
 .report-button {
   height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-left: 3px;
   border: 2px solid #48209f;
   border-radius: 6px;
-  padding: 10px;
+  padding: 6px;
   background: #fff; }
 
 /* charity page */
@@ -1682,13 +1697,13 @@ ol.flickity-page-dots {
         -o-object-fit: cover;
            object-fit: cover;
         width: 100%;
-        height: 40vh; }
+        height: 27vh; }
         @media (min-width: 600px) {
           .single-charity .site-content article .charity-header .charity-image img {
-            height: 60vh; } }
+            height: 41vh; } }
         @media (min-width: 1000px) {
           .single-charity .site-content article .charity-header .charity-image img {
-            height: 100vh; } }
+            height: 62vh; } }
     .single-charity .site-content article .charity-header .charity-logo-container {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -1728,7 +1743,9 @@ ol.flickity-page-dots {
             flex-direction: column; }
     .single-charity .site-content article .entry-content .entry-title {
       text-align: center;
-      font-size: 25px;
+      text-transform: capitalize;
+      margin-bottom: 2rem;
+      font-size: 1.5rem;
       color: #14225F; }
       @media (min-width: 600px) {
         .single-charity .site-content article .entry-content .entry-title {
@@ -1736,28 +1753,39 @@ ol.flickity-page-dots {
     .single-charity .site-content article .entry-content .amount-funded {
       background-color: rgba(216, 216, 216, 0.18);
       text-align: center; }
-      .single-charity .site-content article .entry-content .amount-funded p {
-        font-size: 36px;
-        margin: 0 20px 0 0;
+      .single-charity .site-content article .entry-content .amount-funded .counter-p {
+        padding-top: 1.2rem;
+        font-size: 1.2rem;
+        margin: 0;
         color: #42299A;
-        font-family: "Montserrat", sans-serif;
         font-weight: bold;
-        line-height: 60px;
-        letter-spacing: normal;
+        line-height: 29px;
+        letter-spacing: 1px;
         font-style: normal; }
         @media (min-width: 1000px) {
-          .single-charity .site-content article .entry-content .amount-funded p {
+          .single-charity .site-content article .entry-content .amount-funded .counter-p {
             font-size: 40px; } }
+      .single-charity .site-content article .entry-content .amount-funded .charity-amount-title {
+        font-size: 1.2rem;
+        margin: 0;
+        color: #42299A;
+        font-weight: bold;
+        line-height: 29px;
+        letter-spacing: 1px;
+        font-style: normal; }
+        @media (min-width: 1000px) {
+          .single-charity .site-content article .entry-content .amount-funded .charity-amount-title {
+            font-size: 40px;
+            margin: 19px; } }
     .single-charity .site-content article .entry-content .charity-description p {
+      padding: 20px;
       font-style: normal;
       margin-left: auto;
       margin-right: auto;
-      font-family: Montserrat, sans-serif;
-      font-size: 16px;
+      font-size: 0.9rem;
       font-weight: 300;
-      line-height: 33px;
-      text-align: center;
-      padding: -6px; }
+      line-height: 1.8rem;
+      text-align: center; }
       @media (min-width: 1000px) {
         .single-charity .site-content article .entry-content .charity-description p {
           width: 800px;
@@ -1773,8 +1801,21 @@ ol.flickity-page-dots {
       display: flex;
       -webkit-box-pack: center;
           -ms-flex-pack: center;
-              justify-content: center; }
+              justify-content: center;
+      padding: 10px; }
+      @media (min-width: 600px) {
+        .single-charity .site-content article .entry-content .charity-video {
+          padding: 21px; } }
+  @media (min-width: 600px) and (min-width: 1000px) {
+    .single-charity .site-content article .entry-content .charity-video {
+      height: 421px; } }
+      .single-charity .site-content article .entry-content .charity-video iframe {
+        height: 236px; }
+        @media (min-width: 600px) {
+          .single-charity .site-content article .entry-content .charity-video iframe {
+            height: 323px; } }
     .single-charity .site-content article .entry-content .main-content {
+      background-color: #F9F5ED;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -1782,7 +1823,7 @@ ol.flickity-page-dots {
       -webkit-box-direction: normal;
           -ms-flex-direction: column;
               flex-direction: column;
-      padding: 42px;
+      padding: 21px;
       -webkit-box-align: center;
           -ms-flex-align: center;
               align-items: center; }
@@ -1813,7 +1854,7 @@ ol.flickity-page-dots {
                 width: 70%; } }
             @media (min-width: 1000px) {
               .single-charity .site-content article .entry-content .main-content .single-content .main-image img {
-                width: 80%; } }
+                width: 92%; } }
         .single-charity .site-content article .entry-content .main-content .single-content .content-w-image .p-description {
           width: 100%;
           text-align: justify;
@@ -1837,15 +1878,22 @@ ol.flickity-page-dots {
 
 /* individual part */
 .single-charity .button-no-image {
-  text-align: center; }
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
 
 .single-charity h3 {
-  text-align: center; }
+  text-align: center;
+  color: #42299A; }
 
 @media (min-width: 600px) {
   .single-charity .content-wo-image {
     text-align: left;
-    padding-bottom: 2rem; } }
+    padding-bottom: 1rem; } }
 
 .single-charity .content-wo-image a {
   text-align: center; }
@@ -1853,8 +1901,7 @@ ol.flickity-page-dots {
 .browse-charities-title {
   text-align: center; }
 
-.chimp-donate-form {
-  margin-top: 3em;
+.single-charity .chimp-donate-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1862,9 +1909,21 @@ ol.flickity-page-dots {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 16px;
-  width: 7em;
-  margin-top: 3rem; }
+  width: 12rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background-color: #00BEA8;
+  font-size: 1rem;
+  font-weight: 700;
+  padding: 1.2rem 3rem;
+  color: #192726;
+  border-radius: 8px; }
+  @media (min-width: 600px) {
+    .single-charity .chimp-donate-form {
+      font-size: 1.2rem; } }
+  @media (min-width: 1000px) {
+    .single-charity .chimp-donate-form {
+      font-size: 1.7rem; } }
 
 .link-charity {
   padding: 2em;
@@ -2825,14 +2884,16 @@ ol.flickity-page-dots {
       .page-template-page-contact .site-content .post-25 h4 {
         font-size: 25px; } }
   .page-template-page-contact .site-content .post-25 .contact-text p {
-    font-weight: 400;
-    font-style: normal;
-    color: #14225F;
-    line-height: 16px; }
-    @media (min-width: 600px) {
-      .page-template-page-contact .site-content .post-25 .contact-text p {
-        text-align: center;
-        font-size: 20px; } }
+    margin: 0; }
+    .page-template-page-contact .site-content .post-25 .contact-text p strong {
+      font-weight: 600;
+      font-style: normal;
+      color: #14225F;
+      line-height: 16px; }
+      @media (min-width: 600px) {
+        .page-template-page-contact .site-content .post-25 .contact-text p strong {
+          text-align: center;
+          font-size: 20px; } }
   .page-template-page-contact .site-content .post-25 .entry-content p {
     font-style: normal; }
     @media (min-width: 600px) {
@@ -2919,15 +2980,6 @@ ol.flickity-page-dots {
 /*--------------------------------------------------------------
 # 404 Page
 --------------------------------------------------------------*/
-<<<<<<< HEAD
-.page-template-404 .container-404 {
-  max-width: 100%;
-  background-image: url(../../assets/images/output-onlinepngtools.png);
-  background-size: contain;
-  background-position: 4px;
-  background-repeat: no-repeat;
-  width: 40%;
-=======
 @media (min-width: 600px) {
   .error404 .mobile {
     display: none; } }
@@ -2953,7 +3005,6 @@ ol.flickity-page-dots {
   padding-top: 3rem;
   width: 100%;
   height: 400px;
->>>>>>> b9d3bcb80fd2dad361452fc1e68ea8d430540f68
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4005,7 +4056,7 @@ ol.flickity-page-dots {
     .blog .site-content .blog-header .impact-heart {
       text-align: center; }
       .blog .site-content .blog-header .impact-heart img {
-        width: 334px;
+        width: 298px;
         -o-object-fit: cover;
            object-fit: cover; }
   .blog .site-content .post {
@@ -4188,8 +4239,8 @@ ol.flickity-page-dots {
 .next-post-main {
   display: none; }
 
-.pre-nav-1,
-.next {
+.single .pre-nav-1,
+.single .next {
   display: none; }
 
 @media (min-width: 1000px) {
