--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -1092,7 +1092,7 @@ body .hide-desktop {
        object-position: 50% 48%; } }
 
 .single-fund .hfeed .related-charities {
-  max-width: 283px;
+  max-width: 18rem;
   margin: 0.4rem auto; }
   .single-fund .hfeed .related-charities .flickity-viewport {
     height: 320px; }
@@ -1135,27 +1135,38 @@ body .hide-desktop {
         max-height: 40%;
         height: auto;
         width: auto; }
+    .single-fund .hfeed .related-charities .flickity-viewport .flickity-slider .flickity-prev-next-button {
+      display: unset; }
+
+@media (min-width: 600px) {
+  .single-fund .hfeed .related-charities {
+    max-width: 90%; }
+    .single-fund .hfeed .related-charities .carousel-cell {
+      width: 45%;
+      margin: 0 1rem; }
+    .single-fund .hfeed .related-charities .previous {
+      left: -35px; }
+    .single-fund .hfeed .related-charities .next {
+      right: -35px; } }
 
 @media (min-width: 800px) {
-  .single-fund .hfeed .related-charities {
-    max-width: 42rem; }
-    .single-fund .hfeed .related-charities .flickity-viewport {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: row;
-              flex-direction: row;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
-      width: 70rem; }
-      .single-fund .hfeed .related-charities .flickity-viewport .carousel-cell {
-        max-width: 100%; } }
+  .single-fund .hfeed .related-charities .flickity-viewport {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 70rem; }
+    .single-fund .hfeed .related-charities .flickity-viewport .carousel-cell {
+      max-width: 100%; } }
 
 /* The Team page */
 .page-template-page-team .site-content .entry-header {
@@ -1980,8 +1991,11 @@ ol.flickity-page-dots {
   -ms-flex-direction: column;
       flex-direction: column;
   color: #fff;
-  font-size: 1.12rem;
+  font-size: .8rem;
   padding: 1.4rem 0; }
+  @media (min-width: 600px) {
+    .site-footer {
+      font-size: .9rem; } }
   @media (min-width: 1000px) {
     .site-footer {
       display: -webkit-box;
@@ -2919,15 +2933,6 @@ ol.flickity-page-dots {
 /*--------------------------------------------------------------
 # 404 Page
 --------------------------------------------------------------*/
-<<<<<<< HEAD
-.page-template-404 .container-404 {
-  max-width: 100%;
-  background-image: url(../../assets/images/output-onlinepngtools.png);
-  background-size: contain;
-  background-position: 4px;
-  background-repeat: no-repeat;
-  width: 40%;
-=======
 @media (min-width: 600px) {
   .error404 .mobile {
     display: none; } }
@@ -2953,7 +2958,6 @@ ol.flickity-page-dots {
   padding-top: 3rem;
   width: 100%;
   height: 400px;
->>>>>>> b9d3bcb80fd2dad361452fc1e68ea8d430540f68
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4188,10 +4192,6 @@ ol.flickity-page-dots {
 .next-post-main {
   display: none; }
 
-.pre-nav-1,
-.next {
-  display: none; }
-
 @media (min-width: 1000px) {
   .impactfully {
     display: none; } }
@@ -4248,6 +4248,10 @@ ol.flickity-page-dots {
     @media (min-width: 1000px) {
       .single .read-more .read-more-arrow {
         bottom: 37px; } }
+
+.single .pre-nav-1,
+.single .next {
+  display: none; }
 
 /* Single-Post */
 .post-template-default {
