--- a/themes/rcforward/sass/_hamburger.scss
+++ b/themes/rcforward/sass/_hamburger.scss
@@ -102,6 +102,9 @@
 .menu-active {
   &::after {
     transform: rotate(180deg);
-    top: 0;
+    top: 8px;
   }
+}
+.main-navigation .menu .menu-item .sub-menu li:last-child{
+  border-bottom: 0;
 }
