--- a/themes/rcforward/sass/_blog.scss
+++ b/themes/rcforward/sass/_blog.scss
@@ -258,28 +258,16 @@
 .next-post-main {
   display: none;
 }
-<<<<<<< HEAD
 
-=======
-<<<<<<< HEAD
+
 .single{
 .pre-nav-1,
-.next {
+.next-1 {
   display: none;
-=======
-// .pre-nav-1, .next {
-//   display: none;
-// }
-.blog{
-  .pre-nav-1,
-  .next {
-    display: none;
-  }
+}
+}
 
->>>>>>> 6006ad163617070e28c96b8e8ecd1906a563ca5d
-}
-}
->>>>>>> 3055df75c1acad6fc407226a65f4276d5e7998d5
+
 .impactfully {
   @include desktop {
     display: none;
