--- a/themes/rcforward/sass/_page-templates.scss
+++ b/themes/rcforward/sass/_page-templates.scss
@@ -99,11 +99,9 @@
                 margin-top: 0;
               }
               @include desktop {
-
               }
             }
           }
-         
         }
       }
       .entry-donate-page {
@@ -116,10 +114,9 @@
             font-size: 1.2rem;
           }
           @include desktop {
-
           }
         }
-        
+
         @include desktop {
           margin: 2rem 0;
         }
@@ -151,8 +148,8 @@
           border: 2px solid $innovative__purple;
           font-size: 1.1rem;
           font-weight: 700;
-  padding: 1.2rem 2.6rem;
-          
+          padding: 1.2rem 2.6rem;
+
           display: inline-block;
           color: $innovative__purple;
           border-radius: 8px;
@@ -177,7 +174,7 @@
           color: $credible__blue;
           line-height: 3rem;
           @include tablet {
-            font-size: 2.2rem
+            font-size: 2.2rem;
           }
           @include desktop {
             font-size: 2.5rem;
@@ -256,7 +253,6 @@
             @include tablet {
               font-size: 1.2rem;
             }
-      
           }
         }
       }
@@ -519,13 +515,16 @@
       margin: 0.4rem auto;
       .flickity-viewport {
         height: 320px;
-        .flickity-slider {
+      }
+        
           .carousel-cell {
             height: 320px;
             @include display-flex();
             flex-direction: column;
             justify-content: space-around;
-          max-width: 100%;
+            max-width: 100%;
+            margin: 0 21px;
+
             .charity-description {
               font-size: 1.2rem;
               margin: 0 0.7rem;
@@ -548,44 +547,53 @@
               width: auto;
             }
           }
-          .flickity-prev-next-button {
-          display: unset;
-
-          }
+        
+      
+      .flickity-prev-next-button {
+        top: 114%;
+        &.previous {
+          left: 12px;
+        }
+        &.next {
+          right: 12px;
         }
       }
     }
     @include tablet {
       .related-charities {
-        max-width: 90%;
-          .carousel-cell {
-            width: 48%;
-            margin-left: 2rem;
-            margin-right: 0;
-          }
-          .previous {
-  left: -30px;
-          }
-          .next {
-            right: -30px;
-          }
-        
-        
+        max-width: 96%;
+        .flickity-viewport {
+          width: 43rem;
+        }
+            .carousel-cell {
+              width: 40%;
+              margin-left: 38px;
+              margin-right: 38px;
 
+            }
+            .previous {
+              left: -30px;
+              display: unset;
+            }
+            .next {
+              right: -30px;
+              display: unset;
+            }
+          
+        
       }
     }
     @include tablet-large {
       .related-charities {
-        // max-width: 42rem;
-        
+        max-width: 96%;
         .flickity-viewport {
-        @include display-flex();
-
-          width: 70rem;
+          width: 38rem;
+        }
           .carousel-cell {
             max-width: 100%;
+            width: 42%;
+            margin: 0 45px;
           }
-        }
         
       }
     }
@@ -752,7 +760,7 @@
         .plus-symbol {
           display: flex;
           cursor: pointer;
-        margin-right: 1.6rem;
+          margin-right: 1.6rem;
         }
       }
       .answer {
@@ -761,7 +769,7 @@
           color: $grounded__green;
           font-size: 1rem;
           margin-left: 1rem;
-          margin-right: .8rem;
+          margin-right: 0.8rem;
           line-height: 1.5rem;
         }
       }
@@ -789,20 +797,17 @@
       .faqs {
         .question {
           border-bottom: 0;
-          
+
           .plus-symbol {
             display: none;
           }
-
         }
         .answer {
           display: unset;
           p {
             margin-top: 0;
-            margin-bottom: 2.5rem; 
+            margin-bottom: 2.5rem;
           }
-        
-
         }
       }
     }
