--- a/themes/rcforward/sass/_blog.scss
+++ b/themes/rcforward/sass/_blog.scss
@@ -110,7 +110,7 @@
     .ajax-load-more-wrap {
       padding-top: 3rem;
       @include desktop {
-        padding-bottom: 0rem 12rem ;
+           padding: 12rem;
         // padding-right: 12rem;
         // padding-left: 12rem;
       }
@@ -243,40 +243,6 @@
   }
 }
 
-.prev-post-main,
-.next-post-main {
-  display: none;
-}
-<<<<<<< HEAD
-.single {
-  .pre-nav-1,
-  .next-p {
-=======
-
-
-.blog{
-  .pre-nav-1,
-  .next {
-    display: none;
-  }
-}
-  
-
-.impactfully {
-  @include desktop {
->>>>>>> 80c904ab8dd03bcf025e227f10c045f5293dd110
-    display: none;
-    // .pre-nav-1, .next {
-    //   display: none;
-    // }
-    .blog {
-      .pre-nav-1,
-      .next-p {
-        display: none;
-      }
-    }
-  }
-}
 //blog post read More Button
 .blog {
   .read-more {
@@ -424,3 +390,21 @@
     padding: 30px;
   }
 }
+//single part 
+.next-post-intro{
+  display: none;
+  @include desktop{
+    display: block;
+  }
+}
+.next-post-quote{
+  display: none;
+}
+.pre-nav-1, .next-1{
+    display: none;
+}
+.pre-post-main, .next-post-main{
+
+}
+
+
