--- a/themes/rcforward/sass/_navigation.scss
+++ b/themes/rcforward/sass/_navigation.scss
@@ -1,69 +1,73 @@
-// /*--------------------------------------------------------------
-// # Navigation
-// --------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# Navigation
+--------------------------------------------------------------*/
 
 .main-navigation {
-  @include font-size(1.1);
+@include font-size(1.1);
   .menu-item-has-children {
-    position: relative;
-    ul {
-      display: none;
-    }
+        position: relative;
+        ul {
+          display: none;
+        }
   }
-  @include desktop {
+  @include desktop{
     .menu-item-has-children {
-      position: relative;
-      .sub-menu {
+        position: relative;
+      .sub-menu {    
         list-style: none;
         position: absolute;
         z-index: 99;
-        padding: 0;
-        display: none;
-        top: 60px;
-        @include tablet-large {
-          display: none;
-          position: absolute;
-        }
-      }
+              padding: 0;
+              display: none;
+              top:60px;
+  //  @include tablet-large{
+  //    display: none;
+  //  }
+            }
       &:hover {
-        .sub-menu {
+         .sub-menu {
           position: absolute;
           right: 0;
-          top: 70px;
+          top:70px;
           z-index: 99;
           display: block;
           background: #14225f;
         }
+      
       }
     }
   }
 }
-.sub-menu {
-  // padding: 0;
-  // right: 0;
-  // top: 70px;
-  // z-index: 99;
+.sub-menu{
+  padding: 0;
+  @include tablet-large{
+    position: absolute;
+  }
+  right: 0;
+  top:70px;
+  z-index: 99;
 }
 
 /* Site-Header 8*/
 
 .site-header {
   background: #14225f;
-  @include tablet-large {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 999;
+  @include tablet-large{
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    z-index: 999 ;
   }
   .header-container {
+
     display: flex;
     max-width: 1000px;
-    margin: 0 auto;
+    margin:0 auto;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    @include tablet-large {
+    @include tablet-large{
       flex-wrap: nowrap;
     }
     .site-logo {
@@ -73,13 +77,14 @@
       .rcforward-logo {
         color: $white;
         padding-left: 25px;
-        flex-wrap: wrap;
+            flex-wrap: wrap;
         font-family: 'Gilroy Bold', sans-serif;
         text-transform: uppercase;
       }
       .hamburger {
         width: 30%;
-        @include tablet-large {
+        @include tablet-large
+   {
           display: none;
         }
       }
@@ -87,7 +92,8 @@
     .main-navigation {
       display: none;
       width: 100%;
-      @include tablet-large {
+      @include tablet-large
+ {
         display: block;
       }
       .menu-header-menu-container {
@@ -95,71 +101,77 @@
           list-style: none;
           margin: 0;
           padding: 0;
-          @include tablet-large {
-            display: flex;
-            justify-content: flex-end;
+          @include tablet-large
+     {
+                display: flex;
+    justify-content: flex-end;
           }
+
           .menu-item {
             border-top: 1px solid $white;
-            padding: 0;
-            text-align: center;
-            width: 100%;
-            @include tablet-large {
-              width: 180px;
+            padding:0;
+         text-align: center;
+         width:100%;
+         @include tablet-large
+         {
+          width:180px;
               border: none;
               @include display-flex(column);
-              padding: 10px;
+              padding:10px;
             }
             a {
               color: $white;
-              padding: 15px;
-              display: block;
-              @include tablet-large {
+              padding:15px;
+                  display: block;
+              @include tablet-large
+         {
                 display: block;
                 padding: 14px 16px;
                 text-align: center;
               }
             }
             .sub-menu {
-              padding: 0;
-              right: 0;
-              top: 70px;
-              z-index: 99;
+        //       @include tablet-large
+        // {
+        //       border-bottom: 1px solid $white;
+        //                padding: 0;
+        
+        //       }
               li {
-                background: $cream__background;
+                   background: $cream__background;
                 border-bottom: 1px solid $credible__blue;
-                @include tablet-large {
+                @include tablet-large
+          {
                   background: $credible__blue;
-                  border-bottom: 1px solid $white;
-                  padding: 0;
-               
+                     border-bottom: 1px solid $white;
+                     padding: 0;
+          
                 }
                 a {
                   color: $credible__blue;
 
-                  @include tablet-large {
+                  @include tablet-large
+            {
                     color: $white;
-                    padding: 32px;
+                    padding:32px;
+                    
                   }
-                } // a
-              } // li
-              li:last-child{
-                border-bottom: none;
-              }
-            } // .sub-menu
-          } // .menu-item
+                }// a
+              }// li
+            }// .sub-menu
+          }// .menu-item
         }
       }
     }
   }
 }
 
-/* arrow transition */
+/* toggle state */
 .menu-item-has-children {
   &::after {
     transition: 0.5s;
     content: '\f078';
-    font-family: Font awesome\5 Free;
+    font-family: Font Awesome\ 5 Free;
     font-weight: 900;
     right: 2em;
     color: white;
@@ -175,20 +187,13 @@
 .menu-active {
   &::after {
     transform: rotate(180deg);
-    top: 8px;
+    top: 0;
   }
 }
-
-// .menu-active {
-//   &::after {
-//     transform: rotate(180deg);
-//     top: 0;
-//   }
-// }
-
 //remove focus on hamburger
 .menu-toggle {
   &:focus {
     outline: none;
   }
 }
+
