--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -272,6 +272,9 @@ p {
 .why-donate h3 {
   text-align: center; }
 
+/*--------------------------------------------------------------
+# Navigation
+--------------------------------------------------------------*/
 .main-navigation {
   font-size: 17.6px;
   font-size: 1.1rem; }
@@ -288,12 +291,7 @@ p {
         z-index: 99;
         padding: 0;
         display: none;
-        top: 60px; } }
-    @media (min-width: 1000px) and (min-width: 800px) {
-      .main-navigation .menu-item-has-children .sub-menu {
-        display: none;
-        position: absolute; } }
-  @media (min-width: 1000px) {
+        top: 60px; }
       .main-navigation .menu-item-has-children:hover .sub-menu {
         position: absolute;
         right: 0;
@@ -301,6 +299,15 @@ p {
         z-index: 99;
         display: block;
         background: #14225f; } }
+
+.sub-menu {
+  padding: 0;
+  right: 0;
+  top: 70px;
+  z-index: 99; }
+  @media (min-width: 800px) {
+    .sub-menu {
+      position: absolute; } }
 
 /* Site-Header 8*/
 .site-header {
@@ -400,34 +407,27 @@ p {
                 display: block;
                 padding: 14px 16px;
                 text-align: center; } }
-          .site-header .header-container .main-navigation .menu-header-menu-container .menu .menu-item .sub-menu {
-            padding: 0;
-            right: 0;
-            top: 70px;
-            z-index: 99; }
-            .site-header .header-container .main-navigation .menu-header-menu-container .menu .menu-item .sub-menu li {
-              background: #F9F5ED;
-              border-bottom: 1px solid #14225F; }
+          .site-header .header-container .main-navigation .menu-header-menu-container .menu .menu-item .sub-menu li {
+            background: #F9F5ED;
+            border-bottom: 1px solid #14225F; }
+            @media (min-width: 800px) {
+              .site-header .header-container .main-navigation .menu-header-menu-container .menu .menu-item .sub-menu li {
+                background: #14225F;
+                border-bottom: 1px solid #fff;
+                padding: 0; } }
+            .site-header .header-container .main-navigation .menu-header-menu-container .menu .menu-item .sub-menu li a {
+              color: #14225F; }
               @media (min-width: 800px) {
-                .site-header .header-container .main-navigation .menu-header-menu-container .menu .menu-item .sub-menu li {
-                  background: #14225F;
-                  border-bottom: 1px solid #fff;
-                  padding: 0; } }
-              .site-header .header-container .main-navigation .menu-header-menu-container .menu .menu-item .sub-menu li a {
-                color: #14225F; }
-                @media (min-width: 800px) {
-                  .site-header .header-container .main-navigation .menu-header-menu-container .menu .menu-item .sub-menu li a {
-                    color: #fff;
-                    padding: 32px; } }
-            .site-header .header-container .main-navigation .menu-header-menu-container .menu .menu-item .sub-menu li:last-child {
-              border-bottom: none; }
+                .site-header .header-container .main-navigation .menu-header-menu-container .menu .menu-item .sub-menu li a {
+                  color: #fff;
+                  padding: 32px; } }
 
-/* arrow transition */
+/* toggle state */
 .menu-item-has-children::after {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   content: '\f078';
-  font-family: Font awesome\5 Free;
+  font-family: Font Awesome\ 5 Free;
   font-weight: 900;
   right: 2em;
   color: white;
@@ -441,7 +441,7 @@ p {
 .menu-active::after {
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
-  top: 8px; }
+  top: 0; }
 
 .menu-toggle:focus {
   outline: none; }
@@ -1520,9 +1520,6 @@ body .hide-desktop {
           transform: rotate(180deg);
   top: 8px; }
 
-.main-navigation .menu .menu-item .sub-menu li:last-child {
-  border-bottom: 0; }
-
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
@@ -1891,7 +1888,8 @@ ol.flickity-page-dots {
             -webkit-box-orient: horizontal;
             -webkit-box-direction: normal;
                 -ms-flex-direction: row;
-                    flex-direction: row; } }
+                    flex-direction: row;
+            max-width: 950px; } }
         .single-charity .site-content article .entry-content .main-content .single-content .main-image {
           text-align: center;
           position: relative; }
@@ -1960,18 +1958,15 @@ ol.flickity-page-dots {
   width: 12rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
-  background-color: #00BEA8;
-  font-size: 1rem;
-  font-weight: 700;
-  padding: 1.2rem 3rem;
-  color: #192726;
-  border-radius: 8px; }
+  padding: 1.2rem 3rem; }
   @media (min-width: 600px) {
     .single-charity .chimp-donate-form {
-      font-size: 1.2rem; } }
+      font-size: 1.2rem;
+      padding: 1.4rem 4rem; } }
   @media (min-width: 1000px) {
     .single-charity .chimp-donate-form {
-      font-size: 1.7rem; } }
+      font-size: 1.7rem;
+      padding: 1.7rem 4.5rem; } }
 
 .link-charity {
   padding: 2em;
@@ -4159,7 +4154,7 @@ ol.flickity-page-dots {
     padding-top: 3rem; }
     @media (min-width: 1000px) {
       .blog .site-content .ajax-load-more-wrap {
-        padding-bottom: 0rem 12rem; } }
+        padding: 12rem; } }
     .blog .site-content .ajax-load-more-wrap .alm-listing {
       padding: 2rem; }
       @media (min-width: 600px) {
@@ -4290,24 +4285,6 @@ ol.flickity-page-dots {
     display: -ms-flexbox;
     display: flex; }
 
-.prev-post-main,
-.next-post-main {
-  display: none; }
-
-<<<<<<< HEAD
-.single .pre-nav-1,
-.single .next-p {
-=======
-.blog .pre-nav-1,
-.blog .next {
->>>>>>> 80c904ab8dd03bcf025e227f10c045f5293dd110
-  display: none; }
-  .single .pre-nav-1 .blog .pre-nav-1,
-  .single .pre-nav-1 .blog .next-p,
-  .single .next-p .blog .pre-nav-1,
-  .single .next-p .blog .next-p {
-    display: none; }
-
 .blog .read-more {
   position: relative;
   text-align: right;
@@ -4430,3 +4407,15 @@ ol.flickity-page-dots {
   color: #14225F;
   font-size: 20px;
   padding: 30px; }
+
+.next-post-intro {
+  display: none; }
+  @media (min-width: 1000px) {
+    .next-post-intro {
+      display: block; } }
+
+.next-post-quote {
+  display: none; }
+
+.pre-nav-1, .next-1 {
+  display: none; }
