--- a/themes/rcforward/sass/_front-page.scss
+++ b/themes/rcforward/sass/_front-page.scss
@@ -73,6 +73,7 @@
             grid-template-rows: 150px 50px auto 50px;
         }
 
+
         
         display:grid;
 
@@ -80,6 +81,9 @@
             display:none;
             @include tablet{
                 display:block;
+            }
+            @include tablet-large{
+                @include font-size(1);  
             }
         }    
         h3{
